fix: fix overlaping navbar

--- a/src/css/NavButton.css
+++ b/src/css/NavButton.css
@@ -55,7 +55,7 @@
     transition: width 1s;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1000px) {
     .hamburgerIcon {
         display: none;
     }
