--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -91,7 +91,7 @@
     width: 850px !important;
 }
 
-@media screen and (max-width:940px) {
+@media screen and (max-width:970px) {
     .box {
         width: 500px !important;
         height: 500px !important;
